# ChangeLog for dev-perl/PortageXS
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/PortageXS/ChangeLog,v 1.30 2008/07/02 18:22:56 the_paya Exp $

  02 Jul 2008; Javier Villavicencio <the_paya@gentoo.org>
  PortageXS-0.02.08.ebuild:
  Keyworded ~x86-fbsd.

*PortageXS-0.02.08 (12 May 2008)

  12 May 2008; Christian Hartmann <ian@gentoo.org>
  +PortageXS-0.02.08.ebuild:
  Bump to 0.02.08 for bug #216484

  28 Jul 2007; nixnut <nixnut@gentoo.org> PortageXS-0.02.07.ebuild:
  Stable on ppc wrt bug 186751

  27 Jul 2007; Jeroen Roovers <jer@gentoo.org> PortageXS-0.02.07.ebuild:
  Stable for HPPA (bug #186751).

  21 Jun 2007; Raúl Porcel <armin76@gentoo.org> PortageXS-0.02.07.ebuild:
  alpha/ia64/x86 stable

  20 Jun 2007; Christoph Mende <angelos@gentoo.org>
  PortageXS-0.02.07.ebuild:
  Stable on amd64 wrt bug 182668

  21 May 2007; Ferris McCormick <fmccor@gentoo.org>
  PortageXS-0.02.07.ebuild:
  Stable on sparc --- early bump for Bug #178745 --- needed for autounmask to
  work on sparc (and also perl-info).

*PortageXS-0.02.07 (20 May 2007)

  20 May 2007; Christian Hartmann <ian@gentoo.org>
  +PortageXS-0.02.07.ebuild:
  Version bump

  16 May 2007; Steve Dibb <beandog@gentoo.org> PortageXS-0.02.06.ebuild:
  amd64 stable

  07 May 2007; Raúl Porcel <armin76@gentoo.org> PortageXS-0.02.06.ebuild:
  ia64 + x86 stable wrt #172238

  06 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  PortageXS-0.02.06.ebuild:
  ppc stable

  22 Apr 2007; Bryan Østergaard <kloeri@gentoo.org>
  PortageXS-0.02.05.ebuild:
  Stable on Alpha, bug 175040.

*PortageXS-0.02.06 (19 Apr 2007)

  19 Apr 2007; Christian Hartmann <ian@gentoo.org>
  -PortageXS-0.02.02.ebuild, -PortageXS-0.02.04.ebuild,
  +PortageXS-0.02.06.ebuild:
  Version bump; old

  19 Apr 2007; Christian Faulhammer <opfer@gentoo.org>
  PortageXS-0.02.05.ebuild:
  stable amd64, bug 175040

  18 Apr 2007; nixnut <nixnut@gentoo.org> PortageXS-0.02.05.ebuild: