@@ -1,10 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST PortageXS-0.02.05.tar.gz 26143 RMD160 e561ea8619b7b0921639c8237196f9e114130d33 SHA1 cf09a0768fa6372dd8928f03f130c1f951a2d9fe SHA256 a44c2b036120a4008533808291aea55f20da3e33a623527a567a949d4fd41f0a
 DIST PortageXS-0.02.06.tar.gz 27629 RMD160 702b8bc0c1d3b289c4b140f2107de4d6892805f9 SHA1 0ce52c58479848b8f38d5254366c0e95cafbcc63 SHA256 9bf2dfa8d1288530d55c4d8374a8ac80d83884848334a9550ef92df929c46ac8
 DIST PortageXS-0.02.07.tar.gz 28125 RMD160 78815b9355d67f0047e87cd575ac99e469b6c642 SHA1 1267fb59cdacb1fb306a779890dffc679a0b5ecb SHA256 9acea4bdf30a69668c12a328b6e5043252d2631ab964d349ad600d81210ce8a0
 DIST PortageXS-0.02.08.tar.gz 28122 RMD160 7521fe78174756ebde471e441f31fee37fd13f98 SHA1 bdae08ed5a2d1aa82ce45cc219c2bdb7f8a42e4f SHA256 a439b9ed755167fc83477c8594f4da5ec89aa868c651d3ec1eb3b7c214016fea
-EBUILD PortageXS-0.02.05.ebuild 1119 RMD160 2b08fad6ebef407f1d9af18d7aa53d3f89df6f14 SHA1 18e9a8e26458510d72fa7627004c95f3399dd75c SHA256 7890fa10fa8cebaca998095b4b30b86df1c26c81fdd1f184ca6d041a3e6213e0
-EBUILD PortageXS-0.02.06.ebuild 1123 RMD160 3cc16e55747a66f6aab41ae76568eb2707387f8a SHA1 23ec414313b3d3f19e75e3c5e1e773751132e762 SHA256 90660ac246240c3c8d52d596f452951b6aab8ff40fc4b4c590e3fdb664240f44
-EBUILD PortageXS-0.02.07.ebuild 1107 RMD160 5d388e111db717cf9ea026fc47bee569e66e07ca SHA1 a46aa54b513259cad2cff65c9bbd64942709b22e SHA256 faddb1d77448411db8d88139a4b690e34493cfbb167de2a8c70fe1f2930aa069
-EBUILD PortageXS-0.02.08.ebuild 1126 RMD160 53cc2bfa6f2aabd59e5f204c900d09af530d66b2 SHA1 21a3f3b730723fca49fbc1cafe4413bc461940b0 SHA256 c7a1a00d22226034648e07adfab198982290ff3a1b01d937baf4c047e2e6505e
-MISC ChangeLog 3948 RMD160 f188ad7cca60ba49460074e093baa4dc5dc32e59 SHA1 9e39e360d762f5bf3d0fa64390edebe73b274afe SHA256 e02658e8270d4c2d2a1eefa52dd7443f5575a144ddf03d132964b3f90cac5001
+EBUILD PortageXS-0.02.05.ebuild 1120 RMD160 b01b6b35354288e2f10101cdc732b431cff9a075 SHA1 ea93a6e73290326cb2754ba14933c3b46863d62c SHA256 ff91451eed0699c01a813e79ec5027f01ed051978a67b55c9db5e2af1f8d72da
+EBUILD PortageXS-0.02.06.ebuild 1123 RMD160 c3da4f4f3ab398773bcf053e7e321eac83f7f5b3 SHA1 49387460bb12ff1892165f53f36865e232f19242 SHA256 9c9c49781cb25a78322c0cce307e1f810cee1948e87792fcf7c9d042e774e8ce
+EBUILD PortageXS-0.02.07.ebuild 1108 RMD160 92d8b46ba5ca22052720d6fa3e316a97dee29c0a SHA1 af3cc7c2c2986f6dd43d092daa0f0a077372d811 SHA256 1883cdff7280899c3b4ac4ee25baa995b75b171ca0f52a35bd5314bcc9a7b69a
+EBUILD PortageXS-0.02.08.ebuild 1125 RMD160 7d8e9b08cb4213e843a26852950389d3d85d8638 SHA1 434a6d6da836e1be0849644ad6e0475dbd36e76a SHA256 c5786ef69d08cd1f4933b6b0b268e1d182d1981090a1678424cb5c19d036d59c
+MISC ChangeLog 4161 RMD160 f8bbc059423d2d83e2a554f8cd78a60b54ac0df1 SHA1 c6c7b1118108a276418fa8efd915c2df8debe418 SHA256 8cca042b5d92b246b0a02d7a4cb1e255c3f44793a8428ce6cca0ad673101c56c
 MISC metadata.xml 304 RMD160 583b128939071e78c19639b32040d0fc93a4d7ed SHA1 ef18029a272435357db2c9659e6604feb85a947a SHA256 cb2e1aac1b922384cc958f14b0607e3707108dd3d08681979cfbd88054cc513f
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkiUwLQACgkQV3J2n04EauzsNwCg0I5rO+aA6Ohs/Bo+gjexxwZ8
+4noAnRN6v0PCTlbKs4CvY8A50H5fQVvY
+=ZZnP
+-----END PGP SIGNATURE-----
