@@ -1,4 +1,14 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST RTF-Writer-1.11.tar.gz 57731 RMD160 98ad35c084ad91f163b79f505a9aae0f52f76ec8 SHA1 52276e5701224158bece4afd2e57c24b03ed5d67 SHA256 9c17e3247e69851d7b3d06569671a1326d5105e9b9724aeeb61963a271cb80f2
-EBUILD RTF-Writer-1.11.ebuild 587 RMD160 ca0c6678f0b70c7efa1d81b4a853904d635ef3d3 SHA1 74fc7e6d72d49d61ea96bb1e182d2ce74a199bac SHA256 cd04483fa11240ad571de8134df724267c72ef86b9770d8c4ae1cc0eb214f374
-MISC ChangeLog 440 RMD160 d79fa2e8206bd1978ad00858d0201371a3197c5b SHA1 a75b73550aaeae59b43ad87cc20bdea3842ff64d SHA256 48b2b34e548b8efa26db49c65691468586cce6b23f7fbea10cbd328941c4729f
+EBUILD RTF-Writer-1.11.ebuild 523 RMD160 8afe6a1c2e595904219280f065416c7ce441a986 SHA1 e7f31e49015aff9d987f2a737ffdae58b1135dcd SHA256 a483d0b2fa4d93ba4f6baf974948493d134bc024542d1a92627f0ac315ca4c7d
+MISC ChangeLog 576 RMD160 156b3923b41ee23150f3db8e4328f99ad7d8dc59 SHA1 f9e35c47c1591d8bfaa151498cab56e5d5a94e23 SHA256 8380393530473fce34e66dcac4987e9aace3f2978156f291c53a9c876b10e692
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkiUwb0ACgkQV3J2n04EauzZXQCgxIyANC/giwvJYL4PNECinpbF
+fCIAnjUf0Bjf83y8YdrHgXcrOWE6of96
+=eNY7
+-----END PGP SIGNATURE-----
