@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/PortageXS
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/PortageXS/ChangeLog,v 1.30 2008/07/02 18:22:56 the_paya Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/PortageXS/ChangeLog,v 1.31 2008/08/02 20:17:02 tove Exp $
+
+  02 Aug 2008; Torsten Veller <tove@gentoo.org> PortageXS-0.02.05.ebuild,
+  PortageXS-0.02.06.ebuild, PortageXS-0.02.07.ebuild,
+  PortageXS-0.02.08.ebuild:
+  perl-core/Sys-Syslog -> virtual/perl-Sys-Syslog (#211621)
 
   02 Jul 2008; Javier Villavicencio <the_paya@gentoo.org>
   PortageXS-0.02.08.ebuild:
